--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -902,7 +902,7 @@ body.now-playing-bar-visible #addAlbumFAB {
 
 /* Spacing from category border */
 .group-header-wrapper {
-  margin-left: 4px;
+  margin-left: -2px;
   margin-top: 4px;
   margin-right: 6px;
   margin-bottom: 2px;
